create table books (
    id bigint generated by default as identity primary key,
    title varchar(255) not null,
    author varchar(255) not null,
    isbn varchar(32) not null unique,
    publisher varchar(255) not null,
    published_date date not null,
    total_quantity integer not null,
    available_quantity integer not null,
    status varchar(32) not null,
    created_at timestamp not null,
    updated_at timestamp not null
);

create table members (
    id bigint generated by default as identity primary key,
    name varchar(255) not null,
    email varchar(255) not null unique,
    phone_number varchar(64) not null,
    status varchar(32) not null,
    created_at timestamp not null,
    updated_at timestamp not null
);

create table loans (
    id bigint generated by default as identity primary key,
    book_id bigint not null,
    member_id bigint not null,
    loaned_at timestamp not null,
    due_date date not null,
    returned_at timestamp,
    status varchar(32) not null,
    constraint fk_loans_book foreign key (book_id) references books(id),
    constraint fk_loans_member foreign key (member_id) references members(id)
);
